header, navigation en meetste uit layout.scss omgegooid en gefixed

--- a/app/scss/components/modules/content-list.scss
+++ b/app/scss/components/modules/content-list.scss
@@ -20,7 +20,7 @@
     li.cl {
 
         &.ic > div {
-            padding-left: $section-list-icon-text-pad;
+            padding-left: 3.51562em; 
         }
 
         > div {
