--- a/app/scss/components/modules/editor/editor-layout.scss
+++ b/app/scss/components/modules/editor/editor-layout.scss
@@ -33,7 +33,7 @@ div.editor-content {
     }
 
     .sorting {
-        border: $editor-sort-active-border;
+        border: 2px dashed;
         background: lighten($yellow, 20%);
     }
 }
