--- a/app/scss/core/_base.scss
+++ b/app/scss/core/_base.scss
@@ -133,11 +133,9 @@ picture {
 }
 
 // Lists
-ul, ol { margin: 0 0 $spacing 1.5rem; }
+ul { list-style: none; margin: 0; }
 
-ul { list-style: disc; }
-
-ol { list-style: decimal; }
+ol { list-style: decimal; margin: 0 0 $spacing 1.5rem; }
 
 dl {
     margin-bottom: $spacing/2; //$spacing;
