--- a/app/scss/core/_settings.scss
+++ b/app/scss/core/_settings.scss
@@ -3,10 +3,9 @@
 // Most of the variables are based on some kind of percentages to maintain stability and consistency.
 // So $variable-10 is small or light and $variable-100 is big or dark.
 
-
 // Set your own font
-$font-family-body: 'georgia', sans-serif;
-$font-family-heading:  'georgia', sans-serif;
+$font-family-body:  'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;;
+$font-family-heading:  'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;;
 
 // $sans-serif: $helvetica;
 // $serif: $georgia;
@@ -53,6 +52,11 @@ $z-index-20: 20;
 $z-index-30: 30;
 
 
+// Menu and header sizes
+$header-height: 4.57rem;
+$menu-size: 272px; // ~19.43rem
+
+
 // Colors
 // Add your own color variables
 
@@ -64,7 +68,7 @@ $z-index-30: 30;
 // #5388cd Marina (neutral)
 
 // Color brand
-$color-brand-50: #1ca382; // Default
+$color-brand-50: #049cdb; // Default
 
 $color-brand-30: lighten($color-brand-50, 20%);
 $color-brand-40: lighten($color-brand-50, 7%);
@@ -101,8 +105,7 @@ $color-neutral-90: #1B2224; // almost black
 $black: #000;
 $white: #fff;
 
-// OLD colors
-$blue: #477dca; 
+// OLD colors 
 $dark-gray: #333;
 $medium-gray: #999;
 $light-gray: #ddd;
