--- a/app/scss/components/modules/hero-notice.scss
+++ b/app/scss/components/modules/hero-notice.scss
@@ -2,8 +2,8 @@
     width: 100%;
     display: block;
     color: $gray;
-    font-size: $hero-notice-font-size;
-    margin-top: $hero-notice-top;
+    font-size: 2em;
+    margin-top: 3em;
     text-align: center;
     position: absolute;
 }
