--- a/app/scss/components/modules/tooltip.scss
+++ b/app/scss/components/modules/tooltip.scss
@@ -4,7 +4,7 @@
     font-size: .7em;
     background: $dark-gray;
     color: $white;
-    border-radius: $tooltip-border-radius;
+    border-radius: .3em;
     padding: 0 .5em;
     opacity: 0;
     cursor: default;
