--- a/app/scss/components/modules/content-filter-list-headers.scss
+++ b/app/scss/components/modules/content-filter-list-headers.scss
@@ -4,7 +4,7 @@
     > .comments,
     > .actions {
         position: absolute;
-        right: $section-list-side-padding;
+        right: 1em;
     }
 
     > .actions {
@@ -41,7 +41,7 @@
 
         .select > button {
             background: none;
-            border: $select-list-hl-button-border;
+            border: $white 2px solid;
 
             span {
                 color: $white;
@@ -59,19 +59,19 @@
 
     > div > button span,
     > div .select > button span {
-        line-height: 1 + $filter-button-padding;
+        line-height: 1 + .5em;
     }
 
     > div > button {
         background: $dark-gray;
-        border: $filter-button-border;
-        padding: ($filter-button-padding / 2) $filter-button-padding * 2;
+        border: none;
+        padding: (.5em / 2) .5em * 2;
     }
 
     > div .select > button {
         background: none;
-        border: $select-list-button-border;
-        padding: ($filter-button-padding / 2) $filter-button-padding;
+        border: $light-gray 2px solid;
+        padding: (.5em / 2) .5em;
 
         span {
             color: $blue;
