--- a/app/scss/components/modules/select.scss
+++ b/app/scss/components/modules/select.scss
@@ -3,26 +3,26 @@
 
     > button {
         text-align: left;
-        border: $select-list-button-border;
+        border: $light-gray 2px solid;
         position: relative;
 
         &.active span {
-            min-width: $select-list-button-max-width;
+            min-width: 10em;
         }
 
         i {
             position: absolute;
-            right: $select-list-button-padding * 1.5;
+            right: .4em * 1.5;
             top: 25%;
-            margin-left: $select-list-button-padding;
+            margin-left: .4em;
             color: darken($dark-gray, 5%);
         }
 
         span {
             @include ellipsis;
             min-width: 0;
-            margin-right: $select-list-button-padding * 3;
-            max-width: $select-list-button-max-width;
+            margin-right: .4em * 3;
+            max-width: 10em;
         }
     }
 
@@ -31,13 +31,13 @@
         text-align: left;
         color: lighten($dark-gray, 20%);
         font-weight: normal;
-        font-size: $select-list-font-size;
+        font-size: 1.1em;
         left: 0;
-        top: 2.5em / $select-list-font-size + $select-list-button-padding;
+        top: 2.5em / 1.1em + .4em;
         background: $white;
         width: 100%;
-        padding: $select-list-button-padding 0;
-        border: $select-list-border;
+        padding: .4em 0;
+        border: lighten($gray, 10%) .1em solid;
         z-index: 2;
 
         &.paginated {
@@ -76,7 +76,7 @@
             }
 
             &.placeholder {
-                border-bottom: $select-list-placeholder-border;
+                border-bottom: $light-gray 1px dashed;
             }
         }
 
@@ -85,7 +85,7 @@
             color: lighten($dark-gray, 20%);
             width: 100%;
             padding: 0;
-            margin: -$select-list-button-padding 0;
+            margin: -.4em 0;
             border-radius: 0;
 
             &:hover {
