--- a/app/scss/modules/_navigation.scss
+++ b/app/scss/modules/_navigation.scss
@@ -52,7 +52,7 @@ div.layout > nav {
                 padding: 0 .5em;
                 background: $red;
                 color: $white;
-                border-radius: $badge-radius;
+                border-radius: $border-radius-20;
                 font-size: .4em;
             }
         }
@@ -90,7 +90,7 @@ div.layout > nav {
                 padding: 0 .5em;
                 background: $red;
                 color: $white;
-                border-radius: $badge-radius;
+                border-radius: $border-radius-20;
                 font-size: .9em;
             }
         }
