--- a/app/scss/theme/animate.scss
+++ b/app/scss/theme/animate.scss
@@ -43,12 +43,12 @@
 
     0% {
         transform: scaleY(.3);
-        bottom: -$layout-feedback-height;
+        bottom: -3.5em;
     }
 
     20% {
         transform: scaleY(1.2);
-        bottom: -$layout-feedback-height*.1;
+        bottom: -3.5em*.1;
     }
 
     40% {
